Fix for dragging offscreen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ html, body, #container {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
 }
 
 #container {
